--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "bundle/Vundle.vim"]
 	path = bundle/Vundle.vim
-	url = https://github.com/hhu94/dotvim
+	url = https:/github.com/hhu94/dotvim/Vundle.vim
 [submodule "bundle/supertab"]
 	path = bundle/supertab
 	url = https://github.com/hhu94/dotvim
