--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,3 @@
 [submodule "bundle/Vundle.vim"]
 	path = bundle/Vundle.vim
-	url = https:/github.com/hhu94/dotvim/Vundle.vim
-[submodule "bundle/supertab"]
-	path = bundle/supertab
-	url = https://github.com/hhu94/dotvim
-[submodule "bundle/vim-colors-solarized"]
-	path = bundle/vim-colors-solarized
-	url = https://github.com/hhu94/dotvim
-[submodule "bundle/vim-snippets"]
-	path = bundle/vim-snippets
-	url = https://github.com/hhu94/dotvim
-[submodule "bundle/vim-gutentags"]
-	path = bundle/vim-gutentags
-	url = https://github.com/hhu94/dotvim
-[submodule "bundle/YouCompleteMe"]
-	path = bundle/YouCompleteMe
-	url = https://github.com/hhu94/dotvim
-[submodule "bundle/ultisnips"]
-	path = bundle/ultisnips
-	url = https://github.com/hhu94/dotvim
+	url = https://github.com/VundleVim/Vundle.vim
